created index page, within Django templates convention, and two test questions  --Jayan Smart

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -32,6 +32,16 @@
 </head>
 
 <body id="page-top" class="index">
+{#    this is all me showing what django does#}
+    {% if question_list %}
+    <ul>
+    {% for question in question_list %}
+        <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
+    {% endfor %}
+    </ul>
+    {% else %}
+        <p>No polls are available.</p>
+    {% endif %}
 
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
