--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -60,22 +60,22 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#about">About</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
+{#            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">#}
+{#                <ul class="nav navbar-nav navbar-right">#}
+{#                    <li class="hidden">#}
+{#                        <a href="#page-top"></a>#}
+{#                    </li>#}
+{#                    <li class="page-scroll">#}
+{#                        <a href="#portfolio">Portfolio</a>#}
+{#                    </li>#}
+{#                    <li class="page-scroll">#}
+{#                        <a href="#about">About</a>#}
+{#                    </li>#}
+{#                    <li class="page-scroll">#}
+{#                        <a href="#contact">Contact</a>#}
+{#                    </li>#}
+{#                </ul>#}
+{#            </div>#}
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
@@ -113,7 +113,7 @@
                         Algorithm
                         <span class="caret"></span>
                       </button>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                      <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                         <li><a href="#">Dijkstra</a></li>
                         <li><a href="#">Red-Black Tree</a></li>
                         <li><a href="#">Binary Search Tree</a></li>
@@ -123,7 +123,7 @@
                         Language
                         <span class="caret"></span>
                       </button>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                      <ul class="dropdown-menu" aria-labelledby="dropdownMenu3">
                         <li><a href="#">Python</a></li>
                         <li><a href="#">Java</a></li>
                         <li><a href="#">C#</a></li>
