Fixed drop down menus to properly display options.

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -97,32 +97,32 @@
 
                     {#  DROPDOWNS#}
 
-                    <div class="dropdown">
-                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+
+            <div class="dropdown">
+                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
                         Difficulty
-                        <span class="caret"></span>
-                      </button>
+                        <span class="caret"></span></button>
                       <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                         <li><a href="#">Easy</a></li>
                         <li><a href="#">Moderate</a></li>
                         <li><a href="#">Hard</a></li>
-                          <li><a href="#">Kamikaze</a></li>
+                        <li><a href="#">Kamikaze</a></li>
                       </ul>
-
-                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+  </div>
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
                         Algorithm
-                        <span class="caret"></span>
-                      </button>
+                        <span class="caret"></span></button>
                       <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                         <li><a href="#">Dijkstra</a></li>
                         <li><a href="#">Red-Black Tree</a></li>
                         <li><a href="#">Binary Search Tree</a></li>
                       </ul>
-
+   </div>
+                        <div class="dropdown">
                         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                         Language
-                        <span class="caret"></span>
-                      </button>
+                        <span class="caret"></span></button>
                       <ul class="dropdown-menu" aria-labelledby="dropdownMenu3">
                         <li><a href="#">Python</a></li>
                         <li><a href="#">Java</a></li>
@@ -130,6 +130,7 @@
                       </ul>
 
                     </div>
+
 
                 {#  Searchbar#}
 
