--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -99,7 +99,6 @@
 
                 {#  DROPDOWNS#}
 
-
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
                             data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
@@ -138,10 +137,20 @@
 
 
                 {#  Searchbar#}
+                <div class="col-lg-6">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="e.g. red-black tree...">
+                        <span class="input-group-btn">
+        <button class="btn btn-default" type="button">Go!</button>
+      </span>
+                    </div><!-- /input-group -->
+                </div><!-- /.col-lg-6 -->
 
-                <form>
-                    <input class="quicksearch" type="search" name="name">
-                </form>
+                <button type="button" class="btn btn-primary">
+                    <span class="" aria-hidden="false"></span>ADD
+                </button>
+
+
             </div>
         </div>
     </div>
