--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -137,7 +137,7 @@
 
 
                 {#  Searchbar#}
-                <div class="col-lg-6">
+                <div class="search">
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="e.g. red-black tree...">
                         <span class="input-group-btn">
@@ -185,7 +185,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Copyright &copy; Your Website 2016
+                    Copyright &copy; Finding Problems 2016
                 </div>
             </div>
         </div>
