Front-end Customizing

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Finding Problems</title>
 
 
     {# Importing CSS #}
@@ -145,9 +145,9 @@
       </span>
                     </div><!-- /input-group -->
                 </div><!-- /.col-lg-6 -->
-
+                <p></p>
                 <button type="button" class="btn btn-primary">
-                    <span class="" aria-hidden="false"></span>ADD
+                    <span class="" aria-hidden="false"></span>Add To Worksheet
                 </button>
 
 
