--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -90,7 +90,7 @@
             <div class="col-lg-12">
 
                 <div class="intro-text">
-                    <span class="name">Search For Question</span>
+                    <span class="name">Question Search</span>
                     <hr class="star-light">
                     <span class="skills">Difficulty - Algorithm - Language</span>
                 </div>
@@ -98,7 +98,7 @@
                 <p><br><br></p>
 
                 {#  DROPDOWNS#}
-
+            <div class="fullSearch">
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
                             data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
@@ -135,22 +135,22 @@
 
                 </div>
 
-
                 {#  Searchbar#}
                 <div class="search">
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="e.g. red-black tree...">
                         <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
-      </span>
-                    </div><!-- /input-group -->
-                </div><!-- /.col-lg-6 -->
+                            <button class="btn btn-default" type="button">Go!</button>
+                        </span>
+                    </div>
+                </div>
+
                 <p></p>
                 <button type="button" class="btn btn-primary">
                     <span class="" aria-hidden="false"></span>Add To Worksheet
                 </button>
 
-
+            </div>
             </div>
         </div>
     </div>
