Hmmm slightly broken search again. Dropdown deleted.

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Finding Problems</title>
+    <title>Freelancer - Start Bootstrap Theme</title>
 
 
     {# Importing CSS #}
@@ -90,7 +90,7 @@
             <div class="col-lg-12">
 
                 <div class="intro-text">
-                    <span class="name">Question Search</span>
+                    <span class="name">Search For Question</span>
                     <hr class="star-light">
                     <span class="skills">Difficulty - Algorithm - Language</span>
                 </div>
@@ -98,7 +98,7 @@
                 <p><br><br></p>
 
                 {#  DROPDOWNS#}
-            <div class="fullSearch">
+
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
                             data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
@@ -111,7 +111,7 @@
                         <li><a href="#">Kamikaze</a></li>
                     </ul>
                 </div>
-                
+
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -125,22 +125,22 @@
 
                 </div>
 
+
                 {#  Searchbar#}
                 <div class="search">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="e.g. red-black tree...">
+                        <input type="text" class="form-control" placeholder="search keyword(s) here">
                         <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">Go!</button>
-                        </span>
-                    </div>
-                </div>
+        <button class="btn btn-default" type="button">Go!</button>
+      </span>
+                    </div><!-- /input-group -->
+                </div><!-- /.col-lg-6 -->
 
-                <p></p>
                 <button type="button" class="btn btn-primary">
-                    <span class="" aria-hidden="false"></span>Add To Worksheet
+                    <span class="" aria-hidden="false"></span>ADD
                 </button>
 
-            </div>
+
             </div>
         </div>
     </div>
