--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Finding Problems</title>
 
 
     {# Importing CSS #}
@@ -125,19 +125,21 @@
 
                 </div>
 
+                <p><br></p>
 
-                {#  Searchbar#}
-                <div class="search">
+                <div class="search" align="center">
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="search keyword(s) here">
                         <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
-      </span>
+                            <button class="btn btn-default" type="button">Go!</button>
+                        </span>
                     </div><!-- /input-group -->
                 </div><!-- /.col-lg-6 -->
 
+                <p><br></p>
+
                 <button type="button" class="btn btn-primary">
-                    <span class="" aria-hidden="false"></span>ADD
+                    <span class="" aria-hidden="false"></span>ADD TO LIST
                 </button>
 
 
