Aligned and commented a bit

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -85,9 +85,9 @@
 
 <!-- Header -->
 <header>
-    <div class="container">
+    <div class="container" align="center">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg">
 
                 <div class="intro-text">
                     <span class="name">Search For Question</span>
@@ -97,7 +97,7 @@
 
                 <p><br><br></p>
 
-                {#  DROPDOWNS#}
+                {#  DROPDOWNS  #}
 
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
@@ -127,9 +127,10 @@
 
                 <p><br></p>
 
+                {#  SEARCH BAR  #}
                 <div class="search" align="center">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="search keyword(s) here">
+                    <div class="input-group" align="center">
+                        <input type="text" class="form-control" placeholder="search keyword(s) here" >
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="button">Go!</button>
                         </span>
