Added the add new language to drop down

--- a/ProblemFinder/static/problemfinder/css/custom.css
+++ b/ProblemFinder/static/problemfinder/css/custom.css
@@ -41,3 +41,7 @@ header .intro-text .name{
     font-size: 3.7em !important;
 }
 
+.glyphicon {
+   font-family:'Glyphicons Halflings' !important;
+   // more css comes along here
+}
