--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -121,6 +121,8 @@
                         <li><a href="#">Python</a></li>
                         <li><a href="#">Java</a></li>
                         <li><a href="#">C#</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Add new language...</a></li>
                     </ul>
 
                 </div>
