--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -59,6 +59,7 @@
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand" href="#page-top">Finding Problems</a>
+            <a class="bottom-right" href="/admin/">Login</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -198,11 +199,11 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
 <!-- Contact Form JavaScript -->
-<script src="js/jqBootstrapValidation.js"></script>
-<script src="js/contact_me.js"></script>
+<script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
+<script src="{% static 'js/contact_me.js' %}"></script>
 
 <!-- Theme JavaScript -->
-<script src="js/freelancer.min.js"></script>
+<script src="{% static 'js/freelancer.min.js' %}"></script>
 
 </body>
 
