Fixed login button.

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -59,26 +59,21 @@
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand" href="#page-top">Finding Problems</a>
-            <a class="bottom-right" href="/admin/">Login</a>
         </div>
+          {#   <a class="bottom-right pull-right" href="/admin/">Login</a> #}
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        {#            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">#}
-        {#                <ul class="nav navbar-nav navbar-right">#}
-        {#                    <li class="hidden">#}
-        {#                        <a href="#page-top"></a>#}
-        {#                    </li>#}
-        {#                    <li class="page-scroll">#}
-        {#                        <a href="#portfolio">Portfolio</a>#}
-        {#                    </li>#}
-        {#                    <li class="page-scroll">#}
-        {#                        <a href="#about">About</a>#}
-        {#                    </li>#}
-        {#                    <li class="page-scroll">#}
-        {#                        <a href="#contact">Contact</a>#}
-        {#                    </li>#}
-        {#                </ul>#}
-        {#            </div>#}
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="hidden">
+                                <a href="#page-top"></a>
+                            </li>
+                            <li class="page-scroll">
+                                <a href="/admin/">Login</a>
+                            </li>
+
+                        </ul>
+                    </div>
         <!-- /.navbar-collapse -->
     </div>
     <!-- /.container-fluid -->
