Added custom javascript file to allow for dropdown menu functionality etc...

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -21,6 +21,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'problemfinder/font-awesome/font-awesome.min.css' %}"/>
 
 
+    <script src="problemfinder/js/custom.js"></script>
+
+
+
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
@@ -108,6 +112,8 @@
                     </ul>
                 </div>
 
+
+
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -189,6 +195,9 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="{% static 'problemfinder/js/bootstrap.min.js' %}"></script>
+
+<script src="{% static 'problemfinder/js/custom.js' %}"></script>
+
 
 <!-- Plugin JavaScript -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
