Cleaned up code.

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -93,6 +93,7 @@
                 <p><br><br></p>
 
                 {#  DROPDOWNS  #}
+                <!-- Difficulty dropdown menu -->
 
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
@@ -107,6 +108,7 @@
                     </ul>
                 </div>
 
+                <!-- Language choice dropdown menu -->
 
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3"
@@ -132,11 +134,12 @@
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="button">Go!</button>
                         </span>
-                    </div><!-- /input-group -->
-                </div><!-- /.col-lg-6 -->
+                    </div>
+                </div>
 
                 <p><br></p>
 
+                {# ADD NEW QUESTION BUTTON #}
                 <button type="button" class="btn btn-primary">
                     <span class="" aria-hidden="false"></span>ADD TO LIST
                 </button>
