Making search.html

--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -82,68 +82,11 @@
 <header>
     <div class="container" align="center">
         <div class="row">
-            <div class="col-lg">
+            <div class="col-md-6">
 
                 <div class="intro-text">
-                    <span class="name">Search For Question</span>
-                    <hr class="star-light">
-                    <span class="skills">Difficulty - Algorithm - Language</span>
+                    <h3>Results</h3>
                 </div>
-
-                <p><br><br></p>
-
-                {#  DROPDOWNS  #}
-                <!-- Difficulty dropdown menu -->
-
-                <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
-                            data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
-                        Difficulty
-                        <span class="caret"></span></button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                        <li><a href="#">Easy</a></li>
-                        <li><a href="#">Moderate</a></li>
-                        <li><a href="#">Hard</a></li>
-                        <li><a href="#">Kamikaze</a></li>
-                    </ul>
-                </div>
-
-                <!-- Language choice dropdown menu -->
-
-                <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        Language
-                        <span class="caret"></span></button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu3">
-                        <li><a href="#">Python</a></li>
-                        <li><a href="#">Java</a></li>
-                        <li><a href="#">C#</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Add new language...</a></li>
-                    </ul>
-
-                </div>
-
-                <p><br></p>
-
-                {#  SEARCH BAR  #}
-                <div class="search" align="center">
-                    <div class="input-group" align="center">
-                        <input type="text" class="form-control" placeholder="search keyword(s) here">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">Go!</button>
-                        </span>
-                    </div>
-                </div>
-
-                <p><br></p>
-
-                {# ADD NEW QUESTION BUTTON #}
-                <button type="button" class="btn btn-primary" href="search.html">
-                    <a href="#">ADD TO LIST</a>
-                </button>
-
 
             </div>
         </div>
