Linked the search page to the Add to list button  --Jayan Smart

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -141,7 +141,7 @@
 
                 {# ADD NEW QUESTION BUTTON #}
                 <button type="button" class="btn btn-primary" href="search.html">
-                    <a href="#">ADD TO LIST</a>
+                    <a href="search">ADD TO LIST</a>
                 </button>
 
 
