--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -57,7 +57,7 @@
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="#page-top">Finding Problems</a>
+            <a class="navbar-brand" href="/FPServer">Finding Problems</a>
         </div>
         {#   <a class="bottom-right pull-right" href="/admin/">Login</a> #}
 
