--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -164,7 +164,7 @@
                 <div class="footer-col col-md-4">
 
                     {#  Add footer content#}
-                    <h3>Add Whatever here later</h3>
+                    <h3>Footer</h3>
 
                 </div>
                 <div class="footer-col col-md-4">
