--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -134,10 +134,11 @@
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="button">Go!</button>
                         </span>
-                    </div>
+
                 </div>
 
                 <p><br></p>
+
 
                 {# ADD NEW QUESTION BUTTON #}
                 <button type="button" class="btn btn-primary" href="search.html">
@@ -164,7 +165,10 @@
                 <div class="footer-col col-md-4">
 
                     {#  Add footer content#}
-                    <h3>Footer</h3>
+                    <h3></h3>
+
+<a href="search" class="btn btn-primary btn-lg " role="button" >Show Results</a>
+
 
                 </div>
                 <div class="footer-col col-md-4">
