--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -151,6 +151,7 @@
     <div class="container">
         <p><br></p>
         <h3>Search Results</h3>
+        <div>You searched for: {{ query }} </div>
 
         {%  block content %}
             {% if question_list %}
