Search bar changed to form..

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -141,7 +141,7 @@
 {#                </div>#}
 
 
-                <form method="get" action="/search/" >
+                <form method="get" action="search" >
                     <input type="text" id="searchBox" class="input-medium search-query" name="q" placeholder="Search">
                     <input type="submit" class="btn" value="Search" >
                 </form>
